# ecrad

./: .gitignore  CMakeLists.txt  Makefile  Makefile_include.gfortran  Makefile_include.pgi  Makefile_include.pgi_loop  Makefile_include.pgicpu  README.md  timing.py
analysis/: data_size.py
analysis/gpu_demo/: compile_and_run_mempool_demo_cpu_on_pc.sh  compile_and_run_mempool_demo_gpu_on_pc.sh  compile_and_run_on_pc.sh  compile_and_run_on_tsa.sh  functor_demo.F90  gpu_demo.F90  mempool_demo.F90
ci_tests/: CMakeLists.txt  combine_block_len_test_results.py  config.nam.template  config.py.template  cpu_reg_test_report_serialization.py  cpu_regression_test_report.xsd  plot_block_len_test_results.py  tests_runner.py
ci_tests/data/cpu_reg_reference/: era5slice_McICA_report.xml  era5slice_SPARTACUS_report.xml  era5slice_Tripleclouds_report.xml
ci_tests/data/reference/: era5slice_McICA_result.nc  era5slice_Tripleclouds_result.nc
ci_tests/data/tol_reference/: era5slice_McICA_result.nc  era5slice_SPARTACUS_result.nc  era5slice_Tripleclouds_result.nc
cmake/compiler/: cray.cmake  gnu.cmake  intel.cmake  pgi.cmake
cmake/module/: FindNetCDF.cmake
drhook/: CMakeLists.txt  yomhook_dummy.F90
driver/: CMakeLists.txt  ecrad_driver.F90  ecrad_driver_config.F90
driver_report/: CMakeLists.txt  Report.cpp  Report.hpp  driver_report.xsd  driver_report_serialization.py  ecrad_driver_report.f90  report_serialization.py  update_report_serialization.py
ifsaux/: CMakeLists.txt
ifsrrtm/: CMakeLists.txt  rrtm_gas_optical_depth.F90  yoerrtm.F90
practical/: analyze_omptiming.py  config.nam  config_cpu.nam  cpu_timing.sh  gpu_timing.sh
radiation/: CMakeLists.txt  Makefile  radiation_adding_ica_lw.F90  radiation_adding_ica_lw_acc.F90  radiation_aerosol_optics.F90  radiation_cloud_generator.F90  radiation_cloud_generator_acc.F90  radiation_cloud_optics.F90  radiation_config.F90  radiation_flux.F90  radiation_flux_acc.F90  radiation_ifs_rrtm.F90  radiation_interface.F90  radiation_lw_derivatives.F90  radiation_lw_derivatives_acc.F90  radiation_mcica_lw.F90  radiation_mcica_lw_acc.F90  radiation_monochromatic.F90  radiation_random_numbers_acc.F90  radiation_single_level.F90  radiation_two_stream.F90  radiation_two_stream_acc.F90
radsurf/: CMakeLists.txt
test/ifs/: verif.sh
utilities/: CMakeLists.txt  Makefile  omptimers.F90  radiation_utils.F90
